--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
 }
 
 section {
-	background: rgb(184,156,213);
+	background: #0f2479;
 	padding-bottom: 80px;
 	padding-top: 80px;
 	display: flex;
