--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
 }
 
 section {
-	background: #0f2479;
+	background: hsl(0, 86%, 19%);
 	padding-bottom: 80px;
 	padding-top: 80px;
 	display: flex;
