--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
 }
 
 section {
-	background: hsl(0, 86%, 19%);
+	background: oklch(29.984% 0.11426 27.706);
 	padding-bottom: 80px;
 	padding-top: 80px;
 	display: flex;
