--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
 }
 
 section {
-	background: oklch(29.984% 0.11426 27.706);
+	background: rgba(132, 3, 3, 0.541);
 	padding-bottom: 80px;
 	padding-top: 80px;
 	display: flex;
