--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(132, 3, 3, 0.541);
 }
 
 .categoria h2 {
