--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }    
     
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgba(132, 3, 3, 0.541);
     padding: 20px;
     font-size: 32px;
     color: rgba(132, 3, 3, 0.541);
